fix img break on home

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -10,7 +10,7 @@
 		font-size: 20px !important;
 		font-family:"Lato";
 		font-style: italic;
-			color:  #5B5B5B;;	
+			color:  #5B5B5B;;
 				letter-spacing: 1px !important;
 	}
 
@@ -28,7 +28,7 @@
 		color:  #5B5B5B;;
 }
 .socialmedia
-{	
+{
 	padding-left: 0px;
 	height:24px !important	;
 	width:auto;
@@ -57,7 +57,7 @@
 	display: -webkit-flex; /* Safari */
     -webkit-justify-content: space-around;
 }
-		
+
 .header
 {
 	font-size:21px;
@@ -158,7 +158,14 @@ a:hover, a:focus{
 	}
 
 }
-a 
+.item-flex
+{
+	img
+	{
+		height: auto !important;
+	}
+}
+a
 {
 	color: #ff9393;
 }
@@ -166,9 +173,9 @@ h4 a
 {
 	 color:#5B5B5B;
 }
-hr a:hover, a:active, a:focus 
+hr a:hover, a:active, a:focus
 {
-	 color:#5B5B5B;	
+	 color:#5B5B5B;
 }
 
 
@@ -200,10 +207,10 @@ hr a:hover, a:active, a:focus
   }
 .item-flex-img{
    height: 40%;
-  
+
   }
   .item-flex-img-big{
    height: 60%;
-    
+
   }
 }
